--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Домашняя работа №1</title>
+</head>
+<body>
+    <h1>Домашняя работа №1</h1>
+    <div>Для прохождения курса установлен следующий софт:</div>
+    <ul>
+        <li>Adobe Photoshop & Illustrator</li>
+        <li>Open Server</li>
+        <li>PhpStorm</li>
+        <li>Node.js</li>
+        <li>Git</li>
+        <li>VMware Workstation Player</li>
+        <li>macOS</li>
+    </ul>
+</body>
 </html>
