--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Git</li>
         <li>VMware Workstation Player</li>
         <li>macOS</li>
+        <li>commit to git</li>
     </ul>
 </body>
 </html>
