Набросал приблизительную структуру проекта

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Домашняя работа №1</title>
 </head>
-<body>
-    <h1>Домашняя работа №1</h1>
+    <body>
+    <h1>Курс продвинутой верстки</h1>
+    <h2>Домашняя работа №1</h2>
     <div>Для прохождения курса установлен следующий софт:</div>
     <ul>
         <li>Adobe Photoshop & Illustrator</li>
@@ -15,7 +16,8 @@
         <li>Git</li>
         <li>VMware Workstation Player</li>
         <li>macOS</li>
-        <li>commit to git</li>
     </ul>
+    <h2>Домашняя работа №2</h2>
+    <div><a href="2/labuten.html">Второе ДЗ</a></div>
 </body>
 </html>
