--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <li>macOS</li>
     </ul>
     <h2>Домашняя работа №2</h2>
-    <div><a href="2/labuten.html">Второе ДЗ</a></div>
+    <div><a href="2/index.html">Второе ДЗ</a></div>
 </body>
 </html>
