--- a/2/index.html
+++ b/2/index.html
@@ -13,14 +13,42 @@
         <div class="wraper">
             <header class="header">
                 <div class="social">
-
+                    <a href="#"><img class="social__icon" src="svg/facebook.svg" alt=""></a>
+                    <a href="#"><img class="social__icon" src="svg/vk.svg" alt=""></a>
+                    <a href="#"><img class="social__icon" src="svg/twitter.svg" alt=""></a>
                 </div>
+                <div class="login">
+                    <img class="login__icon" src="svg/login.svg" alt="">
+                    <a class="login__link" href="#">вход</a> / <a class="login__link" href="#">регистрация</a>
+                </div>
+                <div class="line-width"></div>
+                <div class="logo">
+                    <img class="logo__image" src="img/logo.png" alt="">
+                </div>
+                <div class="basket">
+                    <a class="basket__link" href="#"><img src="svg/basket.svg" alt="" class="basket__icon"></a>
+                    <a class="basket__link" href="#"><div class="basket__description">КОРЗИНА<br>покупок 0</div></a>
+                </div>
+                <div class="search">
+                    <input class="search__input" type="text" placeholder="поиск"><!--
+                    --><div class="search__button">
+                    <img src="svg/search.svg" alt="" class="search__icon">
+                </div>
+                </div>
+                <nav class="menu">
+                    <div class="menu__item">КАТАЛОГ</div><!--
+                    --><div class="menu__item">АКЦИИ</div><!--
+                    --><div class="menu__item">О НАС</div><!--
+                    --><div class="menu__item">БЛОГ</div>
+                </nav>
             </header>
             <div class="banner">
-
+                <!--todo slider-->
             </div>
             <div class="sale">
-
+                <div class="sale__item"></div>
+                <div class="sale__item"></div>
+                <div class="sale__item"></div>
             </div>
             <div class="catalog">
 
