Сделал наполнение главной страницы

--- a/2/index.html
+++ b/2/index.html
@@ -43,18 +43,209 @@
                 </nav>
             </header>
             <div class="banner">
-                <!--todo slider-->
+                <div class="banner__slide">
+                    <img src="img/logo2.png" alt="" class="banner__image">
+                    <div class="banner__description">
+                        <h2 class="banner__title">
+                            Labuten Cherry
+                        </h2>
+                        <span class="banner__subtitle">НОВАЯ ВЕСЕННЯЯ КОЛЛЕКЦИЯ</span><br>
+                        <span class="banner__ads">Мы рады представить вам новую коллекцию туфель<br>
+                        от знаменитого дизайнера-модельера Кристиана</span><br>
+                        <div class="banner__button">
+                            купить сейчас
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="sale">
-                <div class="sale__item"></div>
-                <div class="sale__item"></div>
-                <div class="sale__item"></div>
+                <div class="sale__item">
+                    <span class="sale__description sale__item_bold">10% скидка</span><br>
+                    <span class="sale__description">уникальные предложения недели на всю старую коллекцию объявлена скидка</span><br>
+                    <a href="#" class="sale__link">Узнать подробности</a>
+                </div>
+                <div class="sale__item">
+                    <span class="sale__description sale__item_bold">10% скидка</span><br>
+                    <span class="sale__description">уникальные предложения недели на всю старую коллекцию объявлена скидка</span><br>
+                    <a href="#" class="sale__link">Узнать подробности</a>
+                </div>
+                <div class="sale__item">
+                    <span class="sale__description sale__item_bold">10% скидка</span><br>
+                    <span class="sale__description">уникальные предложения недели на всю старую коллекцию объявлена скидка</span><br>
+                    <a href="#" class="sale__link">Узнать подробности</a>
+                </div>
             </div>
-            <div class="catalog">
-
-            </div>
+            <main class="catalog">
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+                <div class="catalog__item">
+                    <a href="#" class="catalog__link"><div class="catalog__card">
+                        <img class="catalog__image" src="img/labuten5.jpg" alt="">
+                        <h3 class="catalog__subtitle">labuten cherry</h3>
+                        <div class="catalog__description">Супер-ультра модная модель носить не сносить</div>
+                        <span class="catalog__price">$7000</span>
+                    </div></a>
+                    <a class="catalog__link" href="#"><div class="catalog__basket">
+                        <img class="catalog__icon" src="svg/basket.svg" alt="">
+                    </div></a>
+                    <a href="#" class="catalog__link"><div class="catalog__info">
+                        <img src="svg/info.svg" alt="" class="catalog__icon catalog__icon_mini">
+                    </div></a>
+                </div>
+            </main>
+            <div class="line-width"></div>
             <footer class="footer">
-
+                <div class="footer__item">
+                    <h4 class="footer__subtitle">
+                        Меню
+                    </h4>
+                    <div class="line-width_mini-white"></div>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__subtitle">
+                        Каталог
+                    </h4>
+                    <div class="line-width_mini-white"></div>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__subtitle">
+                        Блог
+                    </h4>
+                    <div class="line-width_mini-white"></div>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                        <li class="footer__list-item"><a class="footer__link" href="#">какая-то ссылка</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__subtitle">
+                        Контакты
+                    </h4>
+                    <div class="line-width_mini-white"></div>
+                    <div class="footer__socials">
+                        <a href="#"><img class="footer__icon" src="svg/facebook-white.svg" alt=""></a>
+                        <a href="#"><img class="footer__icon" src="svg/vk-white.svg" alt=""></a>
+                        <a href="#"><img class="footer__icon" src="svg/twitter-white.svg" alt=""></a>
+                    </div>
+                    <div class="footer__tel">
+                        <span class="footer__phone-number">+7(915)458-75-65</span>
+                        <span class="footer__phone-number">+7(915)458-75-65</span>
+                    </div>
+                </div>
+                <div class="footer__copyright">labuten.ah 2016</div>
             </footer>
         </div>
     </body>
