Сделал второе ДЗ

--- a/2/index.html
+++ b/2/index.html
@@ -7,7 +7,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Домашняя работа №2</title>
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="css/owl.theme.default.css">
         <link rel="stylesheet" href="css/style.css">
+        <script src="libs/jquery-3.1.1.min.js"></script>
+        <script src="libs/owl.carousel.min.js"></script>
+        <script src="js/common.js"></script>
     </head>
     <body>
         <div class="wraper">
@@ -31,29 +37,59 @@
                 </div>
                 <div class="search">
                     <input class="search__input" type="text" placeholder="поиск"><!--
-                    --><div class="search__button">
+                    --><a href="#"><div class="search__button">
                     <img src="svg/search.svg" alt="" class="search__icon">
-                </div>
+                </div></a>
                 </div>
                 <nav class="menu">
-                    <div class="menu__item">КАТАЛОГ</div><!--
-                    --><div class="menu__item">АКЦИИ</div><!--
-                    --><div class="menu__item">О НАС</div><!--
-                    --><div class="menu__item">БЛОГ</div>
+                    <a class="menu__link" href="#"><div class="menu__item">КАТАЛОГ</div></a><!--
+                    --><a class="menu__link" href="#"><div class="menu__item">АКЦИИ</div></a><!--
+                    --><a class="menu__link" href="#"><div class="menu__item">О НАС</div></a><!--
+                    --><a class="menu__link" href="#"><div class="menu__item">БЛОГ</div></a>
                 </nav>
             </header>
             <div class="banner">
-                <div class="banner__slide">
-                    <img src="img/logo2.png" alt="" class="banner__image">
-                    <div class="banner__description">
-                        <h2 class="banner__title">
-                            Labuten Cherry
-                        </h2>
-                        <span class="banner__subtitle">НОВАЯ ВЕСЕННЯЯ КОЛЛЕКЦИЯ</span><br>
-                        <span class="banner__ads">Мы рады представить вам новую коллекцию туфель<br>
+                <div class="owl-carousel owl-theme">
+                    <div class="banner__slide">
+                        <img src="img/logo2.png" alt="" class="banner__image">
+                        <div class="banner__description">
+                            <h2 class="banner__title">
+                                Labuten Cherry
+                            </h2>
+                            <span class="banner__subtitle">НОВАЯ ВЕСЕННЯЯ КОЛЛЕКЦИЯ</span><br>
+                            <span class="banner__ads">Мы рады представить вам новую коллекцию туфель<br>
                         от знаменитого дизайнера-модельера Кристиана</span><br>
-                        <div class="banner__button">
-                            купить сейчас
+                            <a class="banner__link" href="#"><div class="banner__button">
+                                купить сейчас
+                            </div></a>
+                        </div>
+                    </div>
+                    <div class="banner__slide">
+                        <img src="img/logo2.png" alt="" class="banner__image">
+                        <div class="banner__description">
+                            <h2 class="banner__title">
+                                Labuten Cherry
+                            </h2>
+                            <span class="banner__subtitle">НОВАЯ ВЕСЕННЯЯ КОЛЛЕКЦИЯ</span><br>
+                            <span class="banner__ads">Мы рады представить вам новую коллекцию туфель<br>
+                        от знаменитого дизайнера-модельера Кристиана</span><br>
+                            <a class="banner__link" href="#"><div class="banner__button">
+                                купить сейчас
+                            </div></a>
+                        </div>
+                    </div>
+                    <div class="banner__slide">
+                        <img src="img/logo2.png" alt="" class="banner__image">
+                        <div class="banner__description">
+                            <h2 class="banner__title">
+                                Labuten Cherry
+                            </h2>
+                            <span class="banner__subtitle">НОВАЯ ВЕСЕННЯЯ КОЛЛЕКЦИЯ</span><br>
+                            <span class="banner__ads">Мы рады представить вам новую коллекцию туфель<br>
+                        от знаменитого дизайнера-модельера Кристиана</span><br>
+                            <a class="banner__link" href="#"><div class="banner__button">
+                                купить сейчас
+                            </div></a>
                         </div>
                     </div>
                 </div>
