--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     </ul>
     <h2>Домашняя работа №2</h2>
     <div><a href="2/index.html">Второе ДЗ</a></div>
+    <div><a href="4/index.html">Четвертое ДЗ</a></div>
 </body>
 </html>
