фикс формы поиска

--- a/4/index.html
+++ b/4/index.html
@@ -37,7 +37,7 @@
                         <img class="logo__image" src="img/logo.png" alt="">
                     </div>
                     <div class="search">
-                        <form action="" method="post">
+                        <form>
                             <input class="search__input" type="text" placeholder="поиск"><!--
                             --><button class="search__button"><img src="svg/search.svg" alt="" class="search__icon"></button>
                         </form>
