--- a/4/index.html
+++ b/4/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Домашняя работа №4</title>
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
