--- a/index.html
+++ b/index.html
@@ -2,23 +2,133 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Домашняя работа №1</title>
+    <title>Goryachev Sergey Vcard</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="./css/style.css" class="css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css" class="css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/png">
 </head>
-    <body>
-    <h1>Курс продвинутой верстки</h1>
-    <h2>Домашняя работа №1</h2>
-    <div>Для прохождения курса установлен следующий софт:</div>
-    <ul>
-        <li>Adobe Photoshop & Illustrator</li>
-        <li>Open Server</li>
-        <li>PhpStorm</li>
-        <li>Node.js</li>
-        <li>Git</li>
-        <li>VMware Workstation Player</li>
-        <li>macOS</li>
-    </ul>
-    <h2>Домашняя работа №2</h2>
-    <div><a href="2/index.html">Второе ДЗ</a></div>
-    <div><a href="4/index.html">Четвертое ДЗ</a></div>
+<body>
+    <div class="wraper">
+
+        <!-- Аватарка и ссылки на соцсети -->
+
+        <aside class="author">
+            <div class="author__me">
+                <img src="./src/img/me.jpg" alt="Горячев Сергей">
+            </div>
+            <div class="author__description">
+                <div class="author__name">
+                    Сергей Горячев
+                </div>
+                <div class="author__profession">
+                    Junior Frontend Developer
+                </div>
+            </div>
+            <div class="author__social">
+                <a href="#" class="author__link"><div class="social-wrap">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                </div></a>
+                <a href="#" class="author__link"><div class="social-wrap">
+                    <i class="fa fa-vk" aria-hidden="true"></i>
+                </div></a>
+            </div>
+        </aside>
+
+        <!-- Навигация -->
+
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li>
+                    <a href="#" class="navigation__link navigation__link_active">
+                        <div class="navigation__item">
+                            <i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Обо мне
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="navigation__link">
+                        <div class="navigation__item">
+                            <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i><br>Резюме
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="navigation__link">
+                        <div class="navigation__item">
+                            <i class="fa fa-suitcase fa-2x" aria-hidden="true"></i><br>Портфолио
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="navigation__link">
+                        <div class="navigation__item">
+                            <i class="fa fa-comments fa-2x" aria-hidden="true"></i><br>Блог
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="navigation__link">
+                        <div class="navigation__item">
+                            <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i><br>Контакты
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Основной контент -->
+
+        <main class="content">
+            <h1 class="content__title">Обо мне</h1>
+            <div class="content__about-me">
+                <div class="content__info-me">
+                    <ul class="content__list">
+                        <li class="content__item">Полное имя : <span class="content__data">Горячев Сергей</span></li>
+                        <li class="content__item">Дата рождения : <span class="content__data">26 января 1987</span></li>
+                        <li class="content__item">Работа : <span class="content__data">Технический специалист</span></li>
+                        <li class="content__item">Вебсайт : <a href="#" class="content__link">spldead.github.io</a></li>
+                        <li class="content__item">Email : <a href="mailto:spldead@gmail.com" class="content__link">spldead@gmail.com</a></li>
+                        <li class="content__item">Skype : <span class="content__data">splddd</span></li>
+                    </ul>
+                </div>
+                <div class="content__skills">
+                    <ul class="content__skills-list">
+                        <li class="content__skills-item">
+                            <div class="content__skills-title">Photoshop</div>
+                            <div class="content__skills-index"><div class="skills-value4"></div></div>
+                        </li>
+                        <li class="content__skills-item">
+                            <div class="content__skills-title">Illustrator</div>
+                            <div class="content__skills-index"><div class="skills-value3"></div></div>
+                        </li>
+                        <li class="content__skills-item">
+                            <div class="content__skills-title">HTML</div>
+                            <div class="content__skills-index"><div class="skills-value4"></div></div>
+                        </li>
+                        <li class="content__skills-item">
+                            <div class="content__skills-title">CSS</div>
+                            <div class="content__skills-index"><div class="skills-value4"></div></div>
+                        </li>
+                        <li class="content__skills-item">
+                            <div class="content__skills-title">JavaScript</div>
+                            <div class="content__skills-index"><div class="skills-value3"></div></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <article class="content__description">
+                <h2 class="content__title-h2">Я веб разработчик</h2>
+                <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и». Возвращайся ты лучше в свою безопасную страну». Не послушавшись рукописи, наш текст продолжил свой путь. Вскоре ему повстречался коварный составитель</p>
+            </article>
+            <div class="content__doing">
+                <h2 class="content__title-h2">Что я умею</h2>
+                <p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты. Когда от милой моей долины поднимается пар и полдневное солнце стоит над непроницаемой чащей темного леса и лишь редкий луч проскальзывает в его святая святых, а я лежу в высокой траве у быстрого ручья и, прильнув к земле, вижу тысячи всевозможных былинок и чувствую, как близок моему сердцу крошечный мирок, что снует между стебельками, наблюдаю эти неисчислимые, непостижимые разновидности червяков и мошек и чувствую близость всемогущего, создавшего нас по своему подобию, веяние вселюбящего, судившего нам парить в вечном блаженстве, когда взор мой туманится и все вокруг меня и небо надо мной запечатлены в моей душе, точно образ возлюбленной, - тогда, дорогой друг, меня часто томит мысль: "Ах! Как бы выразить, как бы вдохнуть в рисунок то, что так полно, так трепетно живет во мне, запечатлеть отражение моей души, как душа моя - отражение предвечного бога!" Друг</p>
+            </div>
+            <div class="copyright">
+                &copy; 2017
+            </div>
+        </main>
+    </div>
 </body>
 </html>
