--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/style.css" class="css">
     <link rel="stylesheet" href="./css/font-awesome.min.css" class="css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <div class="wraper">
@@ -26,51 +28,62 @@
                 </div>
             </div>
             <div class="author__social">
-                <a href="#" class="author__link"><div class="social-wrap">
+                <a href="https://www.facebook.com/spldead" target="_blank" class="author__link"><div class="social-wrap">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                 </div></a>
-                <a href="#" class="author__link"><div class="social-wrap">
+                <a href="https://vk.com/id8802978" target="_blank" class="author__link"><div class="social-wrap">
                     <i class="fa fa-vk" aria-hidden="true"></i>
                 </div></a>
             </div>
         </aside>
 
         <!-- Навигация -->
-
+        <div class="menu">
+            <button class="hamburger hamburger--squeeze" type="button">
+              <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+              </span>
+            </button>
+            <span class="menu__item">Меню</span></div>
         <nav class="navigation">
             <ul class="navigation__list">
                 <li>
                     <a href="#" class="navigation__link navigation__link_active">
                         <div class="navigation__item">
-                            <i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Обо мне
+                            <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                            <span class="navigation__item-text">Обо мне</span>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="navigation__link">
                         <div class="navigation__item">
-                            <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i><br>Резюме
+                            <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
+                            <span class="navigation__item-text">Резюме</span>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="navigation__link">
                         <div class="navigation__item">
-                            <i class="fa fa-suitcase fa-2x" aria-hidden="true"></i><br>Портфолио
+                            <i class="fa fa-suitcase fa-2x" aria-hidden="true"></i>
+                            <span class="navigation__item-text">Портфолио</span>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="navigation__link">
                         <div class="navigation__item">
-                            <i class="fa fa-comments fa-2x" aria-hidden="true"></i><br>Блог
+                            <i class="fa fa-comments fa-2x" aria-hidden="true"></i>
+                            <span class="navigation__item-text">Блог</span>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="navigation__link">
                         <div class="navigation__item">
-                            <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i><br>Контакты
+                            <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+                            <span class="navigation__item-text">Контакты</span>
                         </div>
                     </a>
                 </li>
