--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="navigation__link">
+                    <a href="./resume.html" class="navigation__link">
                         <div class="navigation__item">
                             <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
                             <span class="navigation__item-text">Резюме</span>
@@ -132,7 +132,7 @@
                 </p>
                 <p class="content__text">
                     На практике применяю библиотеку JQuery, иконочные шрифты и библиотеки с анимацией. При разработке
-                    стараюсь придерживаться БЭМ.
+                    стараюсь придерживаться БЭМ. Для сборки проекта использую Gulp.
                 </p>
                 <p class="content__text">
                     Прочитал книгу Дэвида Флэнагана "JavaScript. Подробное руководство". Нашел ее весьма интересной и
@@ -143,6 +143,11 @@
                     <div class="certificates__image"><img src="./img/NT-K5EYYJ5.jpg" alt="HTML и CSS. Профессиональная верстка"></div>
                     <div class="certificates__image"><img src="./img/NT-Z9M6WUX.jpg" alt="JavaScript для верстальщиков"></div>
                     <div class="certificates__image"><img src="./img/NT-THHV72W.jpg" alt="Продвинутая верстка"></div>
+                </div>
+                <div class="certificate-check">
+                    Проверить сертификаты можно по адресу:
+                    <a href="http://serf.ntschool.ru/check" class="check-link" target="_blank">проверить</a>
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </div>
             </article>
             <footer class="footer">
@@ -158,6 +163,7 @@
                     </div></a>
                 </div>
             </footer>
+            <div class="overlay"></div>
         </div>
     </div>
 </body>
