--- a/contacts.html
+++ b/contacts.html
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="navigation__link navigation__link_active">
+                <a href="./resume.html" class="navigation__link">
                     <div class="navigation__item">
                         <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
                         <span class="navigation__item-text">Резюме</span>
@@ -76,7 +76,7 @@
                 </a>
             </li>
             <li>
-                <a href="./contacts.html" class="navigation__link">
+                <a href="#" class="navigation__link navigation__link_active">
                     <div class="navigation__item">
                         <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
                         <span class="navigation__item-text">Контакты</span>
@@ -86,63 +86,26 @@
         </ul>
     </nav>
     <div class="content">
-        <h1 class="content__title">Резюме</h1>
-        <div class="doing">
-            <div class="vertical-grey-line vertical-grey-line_education-height"></div>
-            <div class="doing-icon">
-                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+        <h1 class="content__title">Свяжитесь со мной</h1>
+        <div class="content__about-me">
+            <div class="contact-form">
+                <h2 class="content__title-h2">Форма обратной связи</h2>
+                <form action="./form.php" method="post" class="form" name="form">
+                    <input type="text" class="form__input" placeholder="Имя" name="name">
+                    <input type="text" class="form__input" placeholder="Email" name="email">
+                    <textarea name="message" id="message" cols="30" rows="5" class="form__message" placeholder="Сообщение"></textarea>
+                    <button class="form__button" type="submit">Отправить</button>
+                </form>
             </div>
-            <div class="doing__item">
-                <h2 class="doing__subtitle-h2">
-                    Школа современных технологий
-                </h2>
-                <h3 class="doing__subtitle-h3">
-                    2016.10 - 2016.12
-                </h3>
-                <p>
-                    Прошел курс продвинутой верстки. В процессе изучил HTML и CSS, кроссбраузерную и адаптивную
-                    технику верстки. Познакомился с JavaScript'ом. И наконец, разобрался с такими инструментами,
-                    как NPM, Gulp, Bower.
-                </p>
-            </div>
-            <div class="doing__item">
-                <h2 class="doing__subtitle-h2">
-                    МФПА (Московская финансово-промышленная академия)
-                </h2>
-                <h3 class="doing__subtitle-h3">
-                    2006 - 2009
-                </h3>
-                <p>
-                    Факультет информатики
-                </p>
-            </div>
-            <div class="doing__item">
-                <h2 class="doing__subtitle-h2">
-                    КОЭК (Красногорский оптико-электронный колледж)
-                </h2>
-                <h3 class="doing__subtitle-h3">
-                    2003 - 2006
-                </h3>
-                <p>
-                    Специальность: Оптические приборы и системы
-                </p>
-            </div>
-        </div>
-        <div class="doing">
-            <div class="vertical-grey-line vertical-grey-line_education-height"></div>
-            <div class="doing-icon">
-                <i class="fa fa-suitcase" aria-hidden="true"></i>
-            </div>
-            <div class="doing__item">
-                <h2 class="doing__subtitle-h2">
-                    Фотограф - Тим. Компьютерные системы
-                </h2>
-                <h3 class="doing__subtitle-h3">
-                    2011 - Настоящее время
-                </h3>
-                <p>
-                    Съемка собранных компьютеров и серверов. Обработка фотографий для сайта.
-                </p>
+            <div class="content__info-me">
+                <h2 class="content__title-h2">Контактная информация</h2>
+                <ul class="content__list">
+                    <li class="content__item">Адресс : <span class="content__data">125222, г. Москва, ул. Барышиха, 12-18</span></li>
+                    <li class="content__item">Телефон : <span class="content__data">+7 (926) 365-60-13</span></li>
+                    <li class="content__item">Email : <a href="mailto:spldead@gmail.com" class="content__link">spldead@gmail.com</a></li>
+                    <li class="content__item">Вебсайт : <a href="#" class="content__link">spldead.github.io</a></li>
+                    <li class="content__item">Skype : <span class="content__data">splddd</span></li>
+                </ul>
             </div>
         </div>
         <footer class="footer">
