--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="navigation__link">
+                    <a href="./contacts.html" class="navigation__link">
                         <div class="navigation__item">
                             <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
                             <span class="navigation__item-text">Контакты</span>
